Correct layout problem

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -159,6 +159,7 @@
     -fx-font-family: "Segoe UI";
     -fx-font-size: 20px;
     -fx-text-fill: #000000;
+    -fx-alignment: center;
 }
 
 .anchor-pane {
